# tinyLLM

./: README.md  pyproject.toml
src/: chat_inference.py  create_shard.py  pretrain.py  pretrain_generate.py  sft.py  train_tokenizer.py  utils.py
src/configs/: chat_config.yaml  model_config.yaml  pretrain_generate_config.yaml  train_config.yaml
src/configs/post_training/: sft-stage1.yaml  sft-stage2.yaml
src/configs/pretraining/: dataset_stage1.yaml  dataset_stage2.yaml  dataset_stage3.yaml
src/models/: Tokenizer.py  TransformerBlock.py  Transformers.py
src/modules/: Attentions.py  CustomHRM.py  RMSNorm.py  RoPE.py  SwiGLU.py
src/my_datasets/: pretrain_dataset.py  sft_dataset.py
