[project]
name = "tinyllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.3.0",
    "flash-attn>=2.8.3",
    "numpy>=2.3.4",
    "psutil>=7.1.2",
    "pyyaml>=6.0.3",
    "ruff>=0.14.3",
    "schedulefree>=1.4.1",
    "setuptools>=80.9.0",
    "tokenizers>=0.22.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
